expr/test/corpus/listbuild.txt
==================================
$LISTBUILD with single string element
==================================
$LISTBUILD("Red")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD shorthand with single element
==================================
$LB("Red")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD with multiple string elements
==================================
$LISTBUILD("Red","Blue","Green")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LB with multiple elements
==================================
$LB("Red","Blue","Green")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD with numeric elements
==================================
$LISTBUILD(1,2,3)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$LISTBUILD with mixed types
==================================
$LISTBUILD("Name",42,3.14)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$LISTBUILD with empty list
==================================
$LISTBUILD()

---

(source_file
  (expression
    (system_defined_function)))

==================================
$LB with empty list
==================================
$LB()

---

(source_file
  (expression
    (system_defined_function)))

==================================
$LISTBUILD with undefined first element
==================================
$LISTBUILD(,"second","third")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD with undefined middle element
==================================
$LISTBUILD("first",,"third")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD with undefined last element
==================================
$LISTBUILD("first","second",)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD with multiple undefined elements
==================================
$LISTBUILD(,,"third",,)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD with all undefined elements
==================================
$LISTBUILD(,,,)

---

(source_file
  (expression
    (system_defined_function)))

==================================
$LISTBUILD with variable elements
==================================
$LISTBUILD(name,age,city)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTBUILD with expressions
==================================
$LISTBUILD(x+1,y*2,z-3)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))
          (binary_operator)
          (expression
            (numeric_literal))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))
          (binary_operator)
          (expression
            (numeric_literal))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))
          (binary_operator)
          (expression
            (numeric_literal)))))))

==================================
$LISTBUILD case insensitive lowercase
==================================
$listbuild("a","b","c")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LB case insensitive lowercase
==================================
$lb("a","b","c")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD case insensitive mixed
==================================
$ListBuild("a","b","c")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD with nested list
==================================
$LISTBUILD($LB("inner1","inner2"),"outer")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (string_literal)))
            (method_arg
              (expression
                (string_literal))))))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD with function call
==================================
$LISTBUILD($PIECE(str,",",1),$LENGTH(str))

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (lvn
                  (objectscript_identifier))))
            (method_arg
              (expression
                (string_literal)))
            (method_arg
              (expression
                (numeric_literal))))))
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (lvn
                  (objectscript_identifier))))))))))

==================================
$LISTBUILD with concatenated string
==================================
$LISTBUILD(firstName_" "_lastName,age)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))
          (binary_operator)
          (expression
            (string_literal))
          (binary_operator)
          (expression
            (lvn
              (objectscript_identifier)))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTBUILD with subscripted variable
==================================
$LISTBUILD(arr(1),arr(2),arr(3))

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)
            (method_args
              (method_arg
                (expression
                  (numeric_literal)))))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)
            (method_args
              (method_arg
                (expression
                  (numeric_literal)))))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)
            (method_args
              (method_arg
                (expression
                  (numeric_literal))))))))))

==================================
$LISTBUILD with global variable
==================================
$LISTBUILD(^data(1),^data(2))

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (gvn
            (identifier)
            (method_args
              (method_arg
                (expression
                  (numeric_literal)))))))
      (method_arg
        (expression
          (gvn
            (identifier)
            (method_args
              (method_arg
                (expression
                  (numeric_literal))))))))))

==================================
$LISTBUILD with empty string element
==================================
$LISTBUILD("","value","")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD in expression
==================================
$LISTBUILD("a","b")_$LISTBUILD("c","d")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))
    (binary_operator)
    (expression
      (system_defined_function
        (method_arg
          (expression
            (string_literal)))
        (method_arg
          (expression
            (string_literal)))))))

==================================
$LISTBUILD with special characters in strings
==================================
$LISTBUILD("Hello, World!","Line1""Line2","Tab	here")

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTBUILD single undefined element
==================================
$LISTBUILD(,)

---

(source_file
  (expression
    (system_defined_function)))

==================================
$LISTBUILD with object property
==================================
$LISTBUILD(obj.Name,obj.Age)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (oref_chain_expr
            (lvn
              (objectscript_identifier))
            (oref_chain_segment
              (oref_property
                (property_name
                  (objectscript_identifier)))))))
      (method_arg
        (expression
          (oref_chain_expr
            (lvn
              (objectscript_identifier))
            (oref_chain_segment
              (oref_property
                (property_name
                  (objectscript_identifier))))))))))

==================================
$LISTBUILD with class method call
==================================
$LISTBUILD(##class(Sample.Person).GetName(),##class(Sample.Person).GetAge())

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (class_method_call
            (class_ref
              (keyword_pound_pound_class)
              (class_name
                (identifier)))
            (method_name
              (objectscript_identifier))
            (method_args))))
      (method_arg
        (expression
          (class_method_call
            (class_ref
              (keyword_pound_pound_class)
              (class_name
                (identifier)))
            (method_name
              (objectscript_identifier))
            (method_args)))))))

==================================
$LISTBUILD with macro
==================================
$LISTBUILD($$MAXLEN,$$DEFAULT)

---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (extrinsic_function
            (line_ref
              (method_name
                (objectscript_identifier))))))
      (method_arg
        (expression
          (extrinsic_function
            (line_ref
              (method_name
                (objectscript_identifier)))))))))

====
$LB argumentless
:error
====
 $LB
---
