expr/test/corpus/listdata-and-length.txt
==================================
$LISTDATA with one argument
==================================
$LISTDATA(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTDATA shorthand with one argument
==================================
$LD(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTDATA with position
==================================
$LISTDATA(list,2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$LISTDATA with position and output variable
==================================
$LISTDATA(list,3,value)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTDATA with global variable output
==================================
$LISTDATA(list,1,^data)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (gvn
            (identifier)))))))

==================================
$LISTDATA case insensitive
==================================
$listdata(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LD case insensitive
==================================
$ld(myList)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTDATA with $LISTBUILD argument
==================================
$LISTDATA($LB("a","b","c"),2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (string_literal)))
            (method_arg
              (expression
                (string_literal)))
            (method_arg
              (expression
                (string_literal))))))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$LISTDATA with subscripted variable
==================================
$LISTDATA(arr(i),pos)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)
            (method_args
              (method_arg
                (expression
                  (lvn
                    (objectscript_identifier))))))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTDATA with subscripted output variable
==================================
$LISTDATA(list,1,result(idx))
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)
            (method_args
              (method_arg
                (expression
                  (lvn
                    (objectscript_identifier)))))))))))

==================================
$LENGTH with one argument
==================================
$LENGTH(str)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LENGTH shorthand with one argument
==================================
$L(str)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LENGTH with string literal
==================================
$LENGTH("Hello World")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal))))))

==================================
$LENGTH with delimiter
==================================
$LENGTH("a,b,c",",")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LENGTH with variable and delimiter
==================================
$LENGTH(str,delim)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LENGTH case insensitive
==================================
$length(str)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$L case insensitive
==================================
$l(str)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LENGTH with empty string
==================================
$LENGTH("")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal))))))

==================================
$LENGTH in expression
==================================
$LENGTH(str)+1
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))
    (binary_operator)
    (expression
      (numeric_literal))))

==================================
$LENGTH with multi-character delimiter
==================================
$LENGTH(data,"||")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LENGTH counting pieces in CSV
==================================
$LENGTH("one,two,three,four",",")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LENGTH with concatenated string
==================================
$LENGTH(str1_str2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))
          (binary_operator)
          (expression
            (lvn
              (objectscript_identifier))))))))

==================================
$LENGTH with subscripted variable
==================================
$LENGTH(arr(i))
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)
            (method_args
              (method_arg
                (expression
                  (lvn
                    (objectscript_identifier)))))))))))

==================================
Nested $LENGTH and $LISTDATA
==================================
$LENGTH($LISTDATA(list,1))
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (lvn
                  (objectscript_identifier))))
            (method_arg
              (expression
                (numeric_literal)))))))))

====
Empty listdata
:error
====
 $LD
---



====
Empty length
:error
====
 $LENGTH
---



====
Empty length shorthand
:error
====
 $L
---
