expr/test/corpus/listfromstring.txt
=== 
LFS no string argument
:error
===
 $LFS()
---

=== 
LFS more than 3 args, emtpy
:error
===
 $LFS(,,,,)
---

=== 
LFS more than 3 args
:error
===
 $LFS(x,"","",s,)
---

=====================
Valid $LISTFROMSTRING
=====================
 $LISTFROMSTRING(string,delimiter,flag) 
 + $LFS(string,delimiter,flag) +
 $LISTFROMSTRING(colorstr,,0) + 
 $LISTFROMSTRING(namestring," ")
---
